# ai_python2025

./: .gitignore  AGENTS.md  CONDA_README.MD  ENVIRONMENT_README.MD  README.md  SESSION01_CODEX.MD  TODO.md  docker-compose.yml  pyproject.toml  requirements.txt  session01.html  session01.ipynb  session02.html  session02.ipynb  session03.html  session03.ipynb  session04.html  session04.ipynb
_data/: italian_recipes_clean.csv  italian_recipes_features.csv
docs/: ENVIRONMENT_README.MD  ENV_CLEAN.MD  ENV_UV.MD  pgvector.md
gandra/: session01.ipynb  session01.py
gandra/session01/: session01.ipynb  session01.md
gandra/session02/: SESSION01_CLAUDE.MD  SESSION02_CODEX.MD  docker-compose.yml  session02.ipynb  session02.py  vector-db.md
gandra/session03/: session03.ipynb  session03.md  session03.py
gandra/session05/: README.py  session05.html  session05.ipynb  session05.py
