[project]
name = "ai-python2025-fork"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "httpx==0.28.1",
    "ipykernel==6.30.1",
    "ipython==9.6.0",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "notebook>=7.4.7",
    "numpy==2.3.3",
    "openai==2.1.0",
    "pandas==2.3.3",
    "pgvector>=0.4.1",
    "psycopg[binary]>=3.2.12",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scipy==1.16.2",
    "tqdm==4.67.1",
]
